Adds points of interest template/controller and navbar directive

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html class="no-js" ng-app="smashingBlockses">
   <head>
     <meta charset="utf-8">
-    <title>smashingBlockses</title>
+    <title>Smashing Blockses</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
     <!-- inject:css -->
@@ -18,6 +17,7 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <sb-navbar></sb-navbar>
 
     <div ui-view></div>
 
