--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,3 +1,7 @@
-<h1>Smashing Bloxes</h1>
+<div class="main">
 
-<p><a ng-href='#/points'>Points of Interest</a></p>
+  <h1>Smashing Bloxes</h1>
+
+  <p><a ng-href='#/points'>Points of Interest</a></p>
+
+</div>
