Adds Point Of Interest directive

--- a/client/app/points/points/points.html
+++ b/client/app/points/points/points.html
@@ -1,9 +1,9 @@
 <h1>Points of Interest</h1>
-<ul class='points-of-interest-list'>
-  <li ng-repeat="point in points">
-    <a ng-href="#/points/{{ point.id }}">{{ point.name }}</a>
-  </li>
-</ul>
+<div class='points-grid'>
+  <div class='point-card' ng-repeat='point in points'>
+    <sb-point point='point'></ng-point>
+  </div>
+</div>
 
 <h3>Add New Point</h3>
 <form class='points-form'>
