Installs jeet and uses it on the POI page

--- a/client/app/points/points/points.html
+++ b/client/app/points/points/points.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<h3>Add New Point</h3>
+<h3>Add New Location</h3>
 <form class='points-form'>
   <div class='form-group'>
     <label for='name'>Name:</label>
