--- a/client/app/points/points/points.html
+++ b/client/app/points/points/points.html
@@ -11,16 +11,17 @@
     <label for='name'>Name:</label>
     <input type='text' ng-model='point.name'>
   </div>
-  <br/>
+  <div class='form-group'>
+    <label for='description'>Description:</label>
+    <input type='text' ng-model='point.description'>
+  </div>
   <div class='form-group'>
     <label for='coordinates'>Coordinates:</label>
     <input type='text' placeholder='XXX, YYY, ZZZ' ng-model='point.coordinates'>
   </div>
-  <br />
   <div class='form-group'>
     <label form='image'>Picture:</label>
     <input type='file' ng-model='point.image'>
   </div>
-  <br />
   <button class='btn btn-success' ng-href='#/' ng-click='createPoint()'>Submit</button>
 </form>
