--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,8 @@
-<div class="main">
-
-  <h1>Smashing Bloxes</h1>
-
-  <p><a ng-href='#/points'>Points of Interest</a></p>
-
-</div>
+<sb-container class="main">
+  <h1 class="main__header">
+    Welcome to Smashing Bloxes!
+  </h1>
+  <p>
+    This is an awesome Smashing Boxes community site.
+  </p>
+</sb-container>
