Map page: content in container

--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,3 +1,5 @@
-<div class="map">
-  <h3>Big Ol' Map</h3>
-</div>
+<sb-container class="map">
+  <div class="map__header">
+    <h1>Big Ol' Map</h1>
+  </div>
+</sb-container>
